# rust-bookmark-api

./: .gitignore  Cargo.toml
migrations/: 20260625081352_create_bookmark_table.sql  20260627044840_create_users.sql  20260627045514_add_user_id_to_bookmarks.sql
src/: error.rs  main.rs
src/db/: bookmark.rs  mod.rs  user.rs
src/handlers/: auth.rs  bookmark.rs  mod.rs
src/models/: bookmark.rs
src/routes/: bookmark.rs
tests/: api_test.rs
