[package]
name = "bookmarks-api"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.102"
argon2 = "0.5.3"
axum = "0.8.9"
chrono = "0.4.45"
dotenvy = "0.15.7"
jsonwebtoken = "10.4.0"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.150"
sqlx = { version = "0.9.0", features = ["postgres", "runtime-tokio", "macros", "migrate", "chrono", "uuid"] }
thiserror = "2.0.18"
tokio = { version = "1.52.3", features = ["full"] }
uuid = "1.23.3"
